feat: nginx docker 首页设置； fix: 添加 数据库 指定环境变量； feat: 启动时初始化数据库的表； chore: 修改空奖的 URL；

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,7 +3,8 @@ server {
     server_name     localhost;
     root /usr/share/nginx/html;
 
-    location ~ /luckydraw/.*/\.(jpg|png|js|html)$ {
+    location / {
+        index luckydraw/index.html;
     }
 
     location /lucky-draw/ {
